--- a/bundles/org.eclipse.platform.doc.user/pom.xml
+++ b/bundles/org.eclipse.platform.doc.user/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-  Copyright (c) 2012 Eclipse Foundation.
+  Copyright (c) 2012 Eclipse Foundation and others.
   All rights reserved. This program and the accompanying materials
   are made available under the terms of the Eclipse Distribution License v1.0
   which accompanies this distribution, and is available at
@@ -24,40 +24,47 @@
   <version>4.2.0-SNAPSHOT</version>
   <packaging>eclipse-plugin</packaging>
 
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.eclipse.tycho.extras</groupId>
-        <artifactId>tycho-eclipserun-plugin</artifactId>
-        <version>${tycho.version}</version>
-        <configuration>
-          <argLine>-Dhelp.lucene.tokenizer=standard</argLine>
-          <appArgLine>-application org.eclipse.ant.core.antRunner -buildfile customBuildCallbacks.xml build.index</appArgLine>
-          <dependencies>
-            <dependency>
-              <artifactId>org.eclipse.ant.core</artifactId>
-              <type>eclipse-plugin</type>
-            </dependency>
-            <dependency>
-              <artifactId>org.apache.ant</artifactId>
-              <type>eclipse-plugin</type>
-            </dependency>
-            <dependency>
-              <artifactId>org.eclipse.help.base</artifactId>
-              <type>eclipse-plugin</type>
-            </dependency>
-          </dependencies>
-        </configuration>
-        <executions>
-          <execution>
-            <goals>
-              <goal>eclipse-run</goal>
-            </goals>
-            <phase>compile</phase>
-          </execution>
-        </executions>
-      </plugin>
-    </plugins>
-  </build>
-
+  <profiles>
+    <profile>
+      <id>build-docs</id>
+      <activation>
+        <activeByDefault>true</activeByDefault>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.eclipse.tycho.extras</groupId>
+            <artifactId>tycho-eclipserun-plugin</artifactId>
+            <version>${tycho.version}</version>
+            <configuration>
+              <argLine>-Dhelp.lucene.tokenizer=standard</argLine>
+              <appArgLine>-application org.eclipse.ant.core.antRunner -buildfile customBuildCallbacks.xml build.index</appArgLine>
+              <dependencies>
+                <dependency>
+                  <artifactId>org.eclipse.ant.core</artifactId>
+                  <type>eclipse-plugin</type>
+                </dependency>
+                <dependency>
+                  <artifactId>org.apache.ant</artifactId>
+                  <type>eclipse-plugin</type>
+                </dependency>
+                <dependency>
+                  <artifactId>org.eclipse.help.base</artifactId>
+                  <type>eclipse-plugin</type>
+                </dependency>
+              </dependencies>
+            </configuration>
+            <executions>
+              <execution>
+                <goals>
+                  <goal>eclipse-run</goal>
+                </goals>
+                <phase>compile</phase>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
 </project>
